fixed navbar and car section

--- a/views/client/mainpage.ejs
+++ b/views/client/mainpage.ejs
@@ -39,7 +39,7 @@
 
         .navbar {
             position: fixed;
-            top: 0px;
+            top: 15px;
             left: 50%;
             transform: translateX(-50%);
             z-index: 1000;
@@ -239,8 +239,9 @@
         .vehicle {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
+            
             justify-content: center;
+            justify-items: center;
             padding: 20px 0;
         }
 
