add cloud storage

--- a/views/admin/adminbooking.ejs
+++ b/views/admin/adminbooking.ejs
@@ -671,7 +671,7 @@
 
                                         <td data-label="Car Details">
                                             <div class="car-details">
-                                                <img src="/uploads/<%= b.car_id.images[0] %>"
+                                                <img src="<%= b.car_id.images[0] %>"
                                                     alt="<%= b.car_id.brand %>" class="car-image" />
                                                 <div class="car-info">
                                                     <h4>
