--- a/views/admin/displayvehicle.ejs
+++ b/views/admin/displayvehicle.ejs
@@ -208,7 +208,7 @@
                     <tr class="card-row">
                         <!-- Car Details -->
                         <td style="display: flex; align-items: center; gap: 10px;">
-                            <img src="/uploads/<%= v.images[0] %>" alt="vehicle image">
+                            <img src="<%= v.images[0] %>" alt="vehicle image">
                             <div style="text-align: left;">
                                 <p style="font-size: 18px; font-weight: 600;">
                                     <%= v.brand %>
