--- a/views/client/cars.ejs
+++ b/views/client/cars.ejs
@@ -488,7 +488,7 @@
 
                                         <!-- Car Image -->
                                         <% if (v.images && v.images.length > 0) { %>
-                                            <img src="/uploads/<%= v.images[0] %>" alt="<%= v.brand %> <%= v.name %>">
+                                            <img src="<%= v.images[0] %>" alt="<%= v.brand %> <%= v.name %>">
                                         <% } else { %>
                                             <img src="/no-image.png" alt="No Image Available">
                                         <% } %>
