--- a/views/client/mybooking.ejs
+++ b/views/client/mybooking.ejs
@@ -425,7 +425,7 @@
                         <div class="booking-card" style=`animation-delay: <%= index * 0.1 %>s;`>
                             <!-- Car Image Section -->
                             <div class="car-image-section">
-                                <img src="/uploads/<%= b.car_id.images %>" alt="<%= b.car_id.brand %> <%= b.car_id.name %>" class="car-image">
+                                <img src="<%= b.car_id.images[0] %>" alt="<%= b.car_id.brand %> <%= b.car_id.name %>" class="car-image">
                                 <div class="car-info">
                                     <h3 class="car-brand"><%= b.car_id.brand %></h3>
                                     <p class="car-details">
