--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -442,7 +442,7 @@
         </div>
 
         <div class="profile">
-            <a href="/admin/profile/<%= admin.id %>" id="profile">
+            <a href="/admin/profile/<%= admin._id %>" id="profile">
                 <i class="fa-solid fa-circle-user"></i>
                 <span><%= admin.name %></span>
             </a>
